# CPCDMessenger

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/BusinessLayer/: CMakeLists.txt
Client/BusinessLayer/contracts/: IChatRepository.h  INetworkClient.h  IUserRepository.h
Client/BusinessLayer/domain/: Chat.h  ChatType.h  FileTransfer.h  Message.h  User.h
Client/BusinessLayer/services/: AuthService.cpp  AuthService.h  ChatService.cpp  ChatService.h  FileTransferService.cpp  FileTransferService.h
Client/Infrastructure/network/: CMakeLists.txt  ClientSession.cpp  ClientSession.h  ConsoleClient.cpp  ConsoleClient.h  IServer.h  ISession.h  Server.cpp  Server.h
Client/Infrastructure/parser_lib/: CMakeLists.txt
Client/Infrastructure/text_lib/: CMakeLists.txt
Client/Presentation/: CMakeLists.txt  main.cpp
RelayServer/: CMakeLists.txt
RelayServer/BusinessLayer/: CMakeLists.txt
RelayServer/BusinessLayer/contracts/: IPasswordHasher.h
RelayServer/BusinessLayer/domain/: ChatType.h  Credential.h  FriendRelation.h  Message.h  Session.h  User.h
RelayServer/BusinessLayer/repository/: IChatRepository.h  ICredentialRepository.h  IFriendRepository.h  IMessageRepository.h  IUserRepository.h
RelayServer/BusinessLayer/services/AuthService/: IAuthService.h  JwtAuthService.cpp  JwtAuthService.h
RelayServer/BusinessLayer/services/ChatService/: ChatService.cpp  ChatService.h  IChatService.h
RelayServer/BusinessLayer/services/ChatService/ChatServiceErrors/: CreateChatError.h
RelayServer/BusinessLayer/services/MessageService/: IMessageService.h  MessageService.cpp  MessageService.h
RelayServer/BusinessLayer/services/UserService/: IUserService.h  UserService.cpp  UserService.h
RelayServer/BusinessLayer/services/UserService/UserServerErrors/: AddFriendError.h  CreateUserError.h  UpdateUserError.h
messenger/: CMakeLists.txt
messenger/Connection/: connection_lib.cpp  connection_lib.h
messenger/Crypto/: Crypto.h
messenger/Message/: Message.h
parser_lib/: argument_parser.cpp  argument_parser.h
text_lib/: text_parser_lib.cpp  text_parser_lib.h
